@@ -742,6 +742,11 @@ retail business management software (GPL'ed).
 a Rapid Serial Visual Projector for computer assisted speed reading.
 </ul>
 
+<ul>
+<li><a href="http://knocker.sourceforge.net">Knocker</a> -
+a simple, versatile, and easy-to-use TCP security port scanner written in C.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
