@@ -1,3 +1,7 @@
+2002-04-02  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added Knocker.
+
 2002-03-27  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added Stoq and GnomeRSVP.
